IAP-9 / IAP-143: Add a "principals" service Ask the principals service who a listing's @-values mean
The pagination servlet kept its own two special names: @me, replaced with the
requester's canonical id, and @myPrincipals, expanded into an OR over the
session's bound principals. Both readings were right, but they were the third
private copy of a vocabulary the platform now owns in one place, and a name
any other module registers - @commentAuthor, or a deployment's own - was
unfilterable for no reason other than this servlet never having heard of it.

Any value starting with @ now goes to the principals service, and however
many principals it stands for become that many conditions ORed together. A
name standing for nobody keeps its own spelling rather than contributing no
condition at all: no stored property holds it, so the filter matches nothing,
where dropping it would have widened the listing from somebody's own work to
everybody's.

@myPrincipals is the one name the SPI could not answer, since only a live
session knows what it is bound to, so it joins the service as principalsOf,
which the membership check already computed privately and now shares. The
generated SQL is unchanged for both names.